13.99.3 regression: Headphone plug/unplug automuting; Ports not switching
Summary
Arch Linux recently updated Pulseaudio to 13.99.3. This new version always mutes volume when plugging/unplugging headphones; the new version also no longer automatically switches output device port to "Headphones" even though it detects that it is plugged in.
The previous version, 13.99.2+13+g7f4d7fcf, worked correctly.
environment
Arch Linux (latest) Reproducible on two laptops with built-in audio ports and a desktop with sound coming through DisplayPort monitor → Speaker.
Steps to reproduce
- Set volume for speakers to a non-muted volume
- Plug in headphones and adjust volume to a non-muted volume
- Unplug the headphones
What is the current bug behavior?
- Volume will always be switched to mute when either unplugging or plugging headphones (regardless of the previous state).
- Plugging in headphones will not automatically switch the output device port to "Headphones" - unmuting the device after the first bug behavior occurs will play sound from the Speakers port.
What is the expected correct behavior?
- Volume mute/levels would be remembered as in previous versions.
- Plugging in headphones would automatically switch the output port to "Headphones"
Thank you for your great work!